# Risky-Flood-AI

./: LICENSE  README.md  pyproject.toml
backend/app/: chat.py  main.py
css/: chat.css  login.css  registro.css
documentacion/: Actividades_proyecto.xlsx  estructura_proyecto.txt  informacion_adicional.txt
js/: chat.js
templates/: chat.html  home.html  login.html  registro.html
